[project]
name = "deep-residual-learning-pytorch"
version = "0.1.0"
description = "PyTorch reproduction of Deep Residual Learning for Image Recognition (He et al., 2015)"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "tqdm>=4.60",
    "tensorboard>=2.12",
]
